<resources>
    <string name="app_name">Gouither</string>
    <string name="title_activity_maps">Map</string>
    <string name="Weather_forecast">Weather forecast</string>
    <string name="Temperature">Temperature</string>
    <string name="Humidity">Humidity</string>
    <string name="Precipitation_probability">Precipitation probability</string>
    <string name="Wind_speed">Wind speed</string>
    <string name="Cloud_cover">Cloud cover</string>
    <string name="forecast_preview">Tap anywhere on the map to know the weather there.</string>
    <string name="deg_celcius_placeholder">%1$d°C</string>
    <string name="percentage_placeholder">%1$d%%</string>
    <string name="km_h_placeholder">%1$.2f km/h</string>
    <string name="Powered_by_Dark_Sky">Powered by Dark Sky</string>
</resources>
