<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingTop="2dp"
        android:text="@string/Powered_by_Dark_Sky"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forecast_preview_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/forecast_preview" />

        <ProgressBar
            android:id="@+id/forecast_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/forecast_icon"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/Weather_forecast"
            android:scaleType="centerInside"
            tools:src="@drawable/rain" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/forecast_temperature_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/Temperature" />

            <TextView
                android:id="@+id/forecast_humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forecast_temperature_label"
                android:padding="4dp"
                android:text="@string/Humidity" />

            <TextView
                android:id="@+id/forecast_precipitation_probability_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forecast_humidity_label"
                android:padding="4dp"
                android:text="@string/Precipitation_probability" />

            <TextView
                android:id="@+id/forecast_wind_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forecast_precipitation_probability_label"
                android:padding="4dp"
                android:text="@string/Wind_speed" />

            <TextView
                android:id="@+id/forecast_cloud_cover_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forecast_wind_speed_label"
                android:padding="4dp"
                android:text="@string/Cloud_cover" />

            <TextView
                android:id="@+id/forecast_temperature_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="4dp"
                android:textColor="@android:color/black"
                tools:text="48.71°F" />

            <TextView
                android:id="@+id/forecast_humidity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/forecast_temperature_label"
                android:padding="4dp"
                android:textColor="@android:color/black"
                tools:text="96%" />

            <TextView
                android:id="@+id/forecast_precipitation_probability_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/forecast_humidity_label"
                android:padding="4dp"
                android:textColor="@android:color/black"
                tools:text="100%" />

            <TextView
                android:id="@+id/forecast_wind_speed_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/forecast_precipitation_probability_label"
                android:padding="4dp"
                android:textColor="@android:color/black"
                tools:text="4.64 mil/h" />

            <TextView
                android:id="@+id/forecast_cloud_cover_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/forecast_wind_speed_label"
                android:padding="4dp"
                android:textColor="@android:color/black"
                tools:text="73%" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>